--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a class="link" href="">Студия</a></li>
         <li><a class="link" href="./portfolio.html">Портфолио</a></li>
         <li><a class="link" href="">Контакты</a></li>
+        <li><a class="link" href="./test.html">TEST Page</a></li>
       </ul>
     </nav>
 
@@ -38,7 +39,6 @@
 
 
   </header>
-
   <!-- Герой -->
   <div class="hero-container">
     <section class="hero">
