--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
 <body>
 
-  <div class="wrapper">
-    <header>
+
+
+  <header class="page-header">
+    <div class="container">
       <nav>
         <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
 
@@ -33,7 +35,6 @@
           <li><a class="link" href="">Студия</a></li>
           <li><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
-          <li><a class="link" href="./test.html">TEST Page</a></li>
         </ul>
       </nav>
 
@@ -42,106 +43,109 @@
         <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-
-
-    </header>
-    <!-- Герой -->
-    <div class="hero-container">
-      <section class="hero">
-        <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
-        <button class="button hero-button" type="button">Заказать услугу</button>
-      </section>
     </div>
 
-    <main>
-      <section class="section">
-        <!-- Особенности -->
-        <h2 class="hidden section-title">Особенности</h2>
-        <ul class="features list">
-          <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="features-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="features-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Планирование</h3>
-            <p class="features-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="features-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
 
-        <!-- Наша деятельность -->
-        <h2 class="section-title">Чем мы занимаемся</h2>
+  </header>
 
-        <ul class="our-activities list">
-          <li><img src="./images/what-we-doing-1.jpg" alt="создание кода с готовой блок-схемы" width="370" /></li>
-          <li><img src="./images/what-we-doing-2.jpg" alt="адаптивная верстка приложений для смартфонов" width="370" />
-          </li>
-          <li><img src="./images/what-we-doing-3.jpg" alt="стилизация приложений" width="370" /></li>
-        </ul>
-      </section>
+  <!-- Герой -->
 
-      <!-- Наша команда-->
+  <section class="hero">
+    <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
+    <button class="hero-button" type="button">Заказать услугу</button>
+  </section>
 
-      <section class="our-team-section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="our-team-list list">
-          <li>
-            <img src="./images/our-team-ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" />
-            <p class="title">Игорь Демьяненко</p>
-            <p class="our-team-item-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/our-team-olha-repina.jpg" alt="Ольга Репина" width="270" />
-            <p class="title">Ольга Репина</p>
-            <p class="our-team-item-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/our-team-nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" />
-            <p class="title">Николай Тарасов</p>
-            <p class="our-team-item-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/our-team-mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
-            <p class="title">Михаил Ермаков</p>
-            <p class="our-team-item-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
 
-    </main>
+  <main>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <!-- Адресс -->
-      <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
-      <address>
-        <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="footer-contacts list">
-          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
-  </div>
+    <section class="section">
+      <!-- Особенности -->
+      <h2 class="hidden section-title">Особенности</h2>
+      <ul class="features list">
+        <li>
+          <h3 class="title">Внимание к деталям</h3>
+          <p class="features-text">
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
+        <li>
+          <h3 class="title">Пунктуальность</h3>
+          <p class="features-text">
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <h3 class="title">Планирование</h3>
+          <p class="features-text">
+            Равным образом консультация с широким активом в значительной
+            степени обуславливает.
+          </p>
+        </li>
+        <li>
+          <h3 class="title">Современные технологии</h3>
+          <p class="features-text">
+            Значимость этих проблем настолько очевидна, что реализация
+            плановых заданий.
+          </p>
+        </li>
+      </ul>
+
+      <!-- Наша деятельность -->
+      <h2 class="section-title">Чем мы занимаемся</h2>
+
+      <ul class="our-activities list">
+        <li><img src="./images/what-we-doing-1.jpg" alt="создание кода с готовой блок-схемы" width="370" /></li>
+        <li><img src="./images/what-we-doing-2.jpg" alt="адаптивная верстка приложений для смартфонов" width="370" />
+        </li>
+        <li><img src="./images/what-we-doing-3.jpg" alt="стилизация приложений" width="370" /></li>
+      </ul>
+    </section>
+
+    <!-- Наша команда-->
+
+    <section class="our-team-section">
+      <h2 class="section-title">Наша команда</h2>
+      <ul class="our-team-list list">
+        <li>
+          <img src="./images/our-team-ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" />
+          <p class="title">Игорь Демьяненко</p>
+          <p class="our-team-item-text">Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/our-team-olha-repina.jpg" alt="Ольга Репина" width="270" />
+          <p class="title">Ольга Репина</p>
+          <p class="our-team-item-text">Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/our-team-nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" />
+          <p class="title">Николай Тарасов</p>
+          <p class="our-team-item-text">Marketing</p>
+        </li>
+        <li>
+          <img src="./images/our-team-mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
+          <p class="title">Михаил Ермаков</p>
+          <p class="our-team-item-text">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <!-- Адресс -->
+    <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+    <address>
+      <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+      <ul class="footer-contacts list">
+        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </address>
+  </footer>
+
 </body>
 
 </html>
