--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,9 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
+
+    <header class="page-header">
+        <div class="header-container">
             <nav>
                 <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
 
@@ -37,126 +38,124 @@
                 <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
+        </div>
 
 
-        </header>
+    </header>
 
-        <main>
-            <h1 class="hidden">Наши проекты</h1>
-            <!-- Наши проекты -->
-            <ul class="portfolio-buttons-list list">
-                <li><button class="button portfolio-button" type="button">Все</button></li>
-                <li><button class="button portfolio-button" type="button">Веб-сайты</button></li>
-                <li><button class="button portfolio-button" type="button">Приложения</button></li>
-                <li><button class="button portfolio-button" type="button">Дизайн</button></li>
-                <li><button class="button portfolio-button" type="button">Маркетинг</button></li>
+    <main>
+        <h1 class="hidden">Наши проекты</h1>
+        <!-- Наши проекты -->
+        <ul class="portfolio-buttons-list list">
+            <li><button class="button portfolio-button" type="button">Все</button></li>
+            <li><button class="button portfolio-button" type="button">Веб-сайты</button></li>
+            <li><button class="button portfolio-button" type="button">Приложения</button></li>
+            <li><button class="button portfolio-button" type="button">Дизайн</button></li>
+            <li><button class="button portfolio-button" type="button">Маркетинг</button></li>
+        </ul>
+
+        <ul class="portfolio list">
+            <li><a href=""><img src="./images/portfolio/technocryak.jpg" width="370px" height="294px" alt="Технокряк">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Технокряк</p>
+                    <p class="portfolio-item-text">Веб-сайт</p>
+                </a></li>
+            <li><a href=""><img src="./images/portfolio/poster-new-orlean.jpg" width="370px" height="294px"
+                        alt="Постер New Orlean vs Golden Star">
+                    <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                        tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Постер New Orlean vs Golden Star</p>
+                    <p>Дизайн</p>
+                </a></li>
+            <li><a href=""><img src="./images/portfolio/restraunt-seafood.jpg" width="370px" height="294px"
+                        alt="Ресторан Seafood">
+                    <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                        tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Ресторан Seafood</p>
+                    <p>Приложение</p>
+                </a></li>
+            <li><a href=""><img src="./images/portfolio/project-prime.jpg" width="370px" height="294px"
+                        alt="Проект Prime">
+                    <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                        tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Проект Prime</p>
+                    <p>Маркетинг</p>
+                </a></li>
+            <li><a href=""><img src="./images/portfolio/project-boxes.jpg" width="370px" height="294px"
+                        alt="Проект Boxes">
+                    <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                        tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Проект Boxes</p>
+                    <p>Приложение</p>
+                </a></li>
+            <li><a href=""><img src="./images/portfolio/inspiration-has-no-borders.jpg" width="370px" height="294px"
+                        alt="Inspiration has no Borders">
+                    <p>lmLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                        tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Inspiration has no Borders</p>
+                    <p>Веб-сайт</p>
+                </a></li>
+            <li><a href=""><img src="./images/portfolio/edition-limited-edition.jpg" width="370px" height="294px"
+                        alt="Издание Limited Edition">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Издание Limited Edition</p>
+                    <p>Дизайн</p>
+                </a></li>
+            <li><a href=""><img src="./images/portfolio/project-lab.jpg" width="370px" height="294px" alt="Проект LAB">
+                    <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                        tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Проект LAB</p>
+                    <p>Маркетинг</p>
+                </a></li>
+            <li><a href=""><img src="./images/portfolio/growing-business.jpg" width="370px" height="294px"
+                        alt="Growing Business">
+                    <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                        tempora
+                        vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
+                        ea,
+                        eos quo. Debitis.</p>
+                    <p class="title">Growing Business</p>
+                    <p>Приложение</p>
+                </a></li>
+        </ul>
+    </main>
+
+    <footer class="footer">
+        <!-- Адресс -->
+        <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+        <address>
+            <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-contacts list">
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
+        </address>
+    </footer>
 
-            <ul class="portfolio list">
-                <li><a href=""><img src="./images/portfolio/technocryak.jpg" width="370px" height="294px"
-                            alt="Технокряк">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Технокряк</p>
-                        <p class="portfolio-item-text">Веб-сайт</p>
-                    </a></li>
-                <li><a href=""><img src="./images/portfolio/poster-new-orlean.jpg" width="370px" height="294px"
-                            alt="Постер New Orlean vs Golden Star">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Постер New Orlean vs Golden Star</p>
-                        <p>Дизайн</p>
-                    </a></li>
-                <li><a href=""><img src="./images/portfolio/restraunt-seafood.jpg" width="370px" height="294px"
-                            alt="Ресторан Seafood">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Ресторан Seafood</p>
-                        <p>Приложение</p>
-                    </a></li>
-                <li><a href=""><img src="./images/portfolio/project-prime.jpg" width="370px" height="294px"
-                            alt="Проект Prime">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Проект Prime</p>
-                        <p>Маркетинг</p>
-                    </a></li>
-                <li><a href=""><img src="./images/portfolio/project-boxes.jpg" width="370px" height="294px"
-                            alt="Проект Boxes">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Проект Boxes</p>
-                        <p>Приложение</p>
-                    </a></li>
-                <li><a href=""><img src="./images/portfolio/inspiration-has-no-borders.jpg" width="370px" height="294px"
-                            alt="Inspiration has no Borders">
-                        <p>lmLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Inspiration has no Borders</p>
-                        <p>Веб-сайт</p>
-                    </a></li>
-                <li><a href=""><img src="./images/portfolio/edition-limited-edition.jpg" width="370px" height="294px"
-                            alt="Издание Limited Edition">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Издание Limited Edition</p>
-                        <p>Дизайн</p>
-                    </a></li>
-                <li><a href=""><img src="./images/portfolio/project-lab.jpg" width="370px" height="294px"
-                            alt="Проект LAB">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Проект LAB</p>
-                        <p>Маркетинг</p>
-                    </a></li>
-                <li><a href=""><img src="./images/portfolio/growing-business.jpg" width="370px" height="294px"
-                            alt="Growing Business">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Growing Business</p>
-                        <p>Приложение</p>
-                    </a></li>
-            </ul>
-        </main>
-
-        <footer class="footer">
-            <!-- Адресс -->
-            <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
-            <address>
-                <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="footer-contacts list">
-                    <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
-        </footer>
-
-    </div>
 </body>
 
 </html>
