--- a/index.html
+++ b/index.html
@@ -59,76 +59,81 @@
   <main>
 
     <section class="section">
-      <!-- Особенности -->
-      <h2 class="hidden section-title">Особенности</h2>
-      <ul class="features list">
-        <li>
-          <h3 class="title">Внимание к деталям</h3>
-          <p class="features-text">
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li>
-          <h3 class="title">Пунктуальность</h3>
-          <p class="features-text">
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li>
-          <h3 class="title">Планирование</h3>
-          <p class="features-text">
-            Равным образом консультация с широким активом в значительной
-            степени обуславливает.
-          </p>
-        </li>
-        <li>
-          <h3 class="title">Современные технологии</h3>
-          <p class="features-text">
-            Значимость этих проблем настолько очевидна, что реализация
-            плановых заданий.
-          </p>
-        </li>
-      </ul>
+      <div class="container">
 
-      <!-- Наша деятельность -->
-      <h2 class="section-title">Чем мы занимаемся</h2>
+        <!-- Особенности -->
+        <h2 class="hidden section-title">Особенности</h2>
+        <ul class="features list">
+          <li>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="features-text">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="features-text">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3 class="title">Планирование</h3>
+            <p class="features-text">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3 class="title">Современные технологии</h3>
+            <p class="features-text">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
 
-      <ul class="our-activities list">
-        <li><img src="./images/what-we-doing-1.jpg" alt="создание кода с готовой блок-схемы" width="370" /></li>
-        <li><img src="./images/what-we-doing-2.jpg" alt="адаптивная верстка приложений для смартфонов" width="370" />
-        </li>
-        <li><img src="./images/what-we-doing-3.jpg" alt="стилизация приложений" width="370" /></li>
-      </ul>
+        <!-- Наша деятельность -->
+        <h2 class="section-title">Чем мы занимаемся</h2>
+
+        <ul class="our-activities list">
+          <li><img src="./images/what-we-doing-1.jpg" alt="создание кода с готовой блок-схемы" width="370" /></li>
+          <li><img src="./images/what-we-doing-2.jpg" alt="адаптивная верстка приложений для смартфонов" width="370" />
+          </li>
+          <li><img src="./images/what-we-doing-3.jpg" alt="стилизация приложений" width="370" /></li>
+        </ul>
+      </div>
     </section>
 
     <!-- Наша команда-->
 
-    <section class="our-team-section">
-      <h2 class="section-title">Наша команда</h2>
-      <ul class="our-team-list list">
-        <li>
-          <img src="./images/our-team-ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" />
-          <p class="title">Игорь Демьяненко</p>
-          <p class="our-team-item-text">Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/our-team-olha-repina.jpg" alt="Ольга Репина" width="270" />
-          <p class="title">Ольга Репина</p>
-          <p class="our-team-item-text">Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/our-team-nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" />
-          <p class="title">Николай Тарасов</p>
-          <p class="our-team-item-text">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/our-team-mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
-          <p class="title">Михаил Ермаков</p>
-          <p class="our-team-item-text">UI Designer</p>
-        </li>
-      </ul>
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="our-team-list list">
+          <li>
+            <img src="./images/our-team-ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" />
+            <p class="our-team-section-title">Игорь Демьяненко</p>
+            <p class="our-team-item-text">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/our-team-olha-repina.jpg" alt="Ольга Репина" width="270" />
+            <p class="our-team-section-title">Ольга Репина</p>
+            <p class="our-team-item-text">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/our-team-nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" />
+            <p class="our-team-section-title">Николай Тарасов</p>
+            <p class="our-team-item-text">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/our-team-mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
+            <p class="our-team-section-title">Михаил Ермаков</p>
+            <p class="our-team-item-text">UI Designer</p>
+          </li>
+        </ul>
+      </div>
     </section>
 
   </main>
