--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <!-- Герой -->
 
-  <section class="hero">
+  <section class="hero container">
     <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
     <button class="hero-button" type="button">Заказать услугу</button>
   </section>
