--- a/portfolio.html
+++ b/portfolio.html
@@ -22,21 +22,21 @@
 <body>
 
     <header class="page-header">
-        <div class="header-container">
-            <nav>
+        <div class="container nav-container">
+            <nav class="nav">
                 <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
 
                 <ul class="site-nav list">
-                    <li><a class="link" href="">Студия</a></li>
-                    <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="link" href="">Контакты</a></li>
+                    <li class="item"><a class="link" href="">Студия</a></li>
+                    <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
 
 
             <ul class="header-contacts list">
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
 
