--- a/test2.html
+++ b/test2.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <header class="header">
+        <ul class="header-list">
+            <li class="header-list-item"><a class="link" href="./test2.html">Main</a></li>
+            <li class="header-list-item"><a class="link" href="./test2-second.html">Second Page</a></li>
+        </ul>
+    </header>
+
 
     <div class="container">
         <ul class="list">
