--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
 
 <body>
 
-
-
   <header class="page-header">
     <div class="container nav-container">
       <nav class="nav">
@@ -44,8 +42,6 @@
         <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
-
-
   </header>
 
   <!-- Герой -->
@@ -115,22 +111,22 @@
         <h2 class="section-title">Наша команда</h2>
         <ul class="our-team-list list">
           <li class="item">
-            <img src="./images/our-team-ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" />
+            <img class="image" src="./images/our-team-ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" />
             <p class="our-team-section-title">Игорь Демьяненко</p>
             <p class="our-team-item-text">Product Designer</p>
           </li>
           <li class="item">
-            <img src="./images/our-team-olha-repina.jpg" alt="Ольга Репина" width="270" />
+            <img class="image" src="./images/our-team-olha-repina.jpg" alt="Ольга Репина" width="270" />
             <p class="our-team-section-title">Ольга Репина</p>
             <p class="our-team-item-text">Frontend Developer</p>
           </li>
           <li class="item">
-            <img src="./images/our-team-nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" />
+            <img class="image" src="./images/our-team-nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" />
             <p class="our-team-section-title">Николай Тарасов</p>
             <p class="our-team-item-text">Marketing</p>
           </li>
           <li class="item">
-            <img src="./images/our-team-mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
+            <img class="image" src="./images/our-team-mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
             <p class="our-team-section-title">Михаил Ермаков</p>
             <p class="our-team-item-text">UI Designer</p>
           </li>
@@ -142,15 +138,17 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <!-- Адресс -->
-    <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
-    <address>
-      <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-      <ul class="footer-contacts list">
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
+    <div class="container">
+      <!-- Адресс -->
+      <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+      <address class="address">
+        <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="footer-contacts list">
+          <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 
 </body>
