--- a/portfolio.html
+++ b/portfolio.html
@@ -39,8 +39,6 @@
                 <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
-
-
     </header>
 
     <main>
@@ -149,15 +147,17 @@
     </main>
 
     <footer class="footer">
-        <!-- Адресс -->
-        <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
-        <address>
-            <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="footer-contacts list">
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <!-- Адресс -->
+            <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+            <address class="address">
+                <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+                <ul class="footer-contacts list">
+                    <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
