--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
 
   <!-- Герой -->
 
-  <section class="hero container">
-    <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
-    <button class="hero-button" type="button">Заказать услугу</button>
+  <section class="hero overlay ">
+    <div class="container">
+      <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
+      <button class="hero-button" type="button">Заказать услугу</button>
+    </div>
+
   </section>
 
 
