--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 
       <ul class="header-contacts list">
-        <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item envelope"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="item phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
@@ -63,7 +63,7 @@
         <!-- Особенности -->
         <h2 class="hidden section-title">Особенности</h2>
         <ul class="features list">
-          <li class="item">
+          <li class="item antenna">
             <h3 class="title">Внимание к деталям</h3>
             <p class="features-text">
               Идейные соображения, а также начало повседневной работы по
