--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
               формированию позиции.
             </p>
           </li>
-          <li class="item">
+          <li class="item clock">
             <h3 class="title">Пунктуальность</h3>
             <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="item">
+          <li class="item diagram">
             <h3 class="title">Планирование</h3>
             <p class="features-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="item">
+          <li class="item astronaut">
             <h3 class="title">Современные технологии</h3>
             <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -109,7 +109,7 @@
 
     <!-- Наша команда-->
 
-    <section class="section">
+    <section class="section bgsection">
       <div class="container our-team">
         <h2 class="section-title">Наша команда</h2>
         <ul class="our-team-list list">
@@ -136,6 +136,23 @@
         </ul>
       </div>
     </section>
+
+
+    <!-- Regular customers -->
+    <div class="section">
+      <div class="container">
+        <h2 class="section-title">Постоянные клиенты</h2>
+
+        <ul class="customers list">
+          <li class="item ya-co"></li>
+          <li class="item company-tagline-here"></li>
+          <li class="item company"></li>
+          <li class="item foster-peters"></li>
+          <li class="item brand"></li>
+          <li class="item company-tagline"></li>
+        </ul>
+      </div>
+    </div>
 
   </main>
 
