--- a/index.html
+++ b/index.html
@@ -117,21 +117,45 @@
             <img class="image" src="./images/our-team-ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" />
             <p class="our-team-section-title">Игорь Демьяненко</p>
             <p class="our-team-item-text">Product Designer</p>
+            <ul class="social-list list">
+              <li class=""><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class=""><a class="link twitter" href="" aria-label="Twitter"></a></li>
+              <li class=""><a class="link facebook" href="" aria-label="Facebook"></a></li>
+              <li class=""><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+            </ul>
           </li>
           <li class="item">
             <img class="image" src="./images/our-team-olha-repina.jpg" alt="Ольга Репина" width="270" />
             <p class="our-team-section-title">Ольга Репина</p>
             <p class="our-team-item-text">Frontend Developer</p>
+            <ul class="social-list list">
+              <li class=""><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class=""><a class="link twitter" href="" aria-label="Twitter"></a></li>
+              <li class=""><a class="link facebook" href="" aria-label="Facebook"></a></li>
+              <li class=""><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+            </ul>
           </li>
           <li class="item">
             <img class="image" src="./images/our-team-nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" />
             <p class="our-team-section-title">Николай Тарасов</p>
             <p class="our-team-item-text">Marketing</p>
+            <ul class="social-list list">
+              <li class=""><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class=""><a class="link twitter" href="" aria-label="Twitter"></a></li>
+              <li class=""><a class="link facebook" href="" aria-label="Facebook"></a></li>
+              <li class=""><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+            </ul>
           </li>
           <li class="item">
             <img class="image" src="./images/our-team-mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
             <p class="our-team-section-title">Михаил Ермаков</p>
             <p class="our-team-item-text">UI Designer</p>
+            <ul class="social-list list">
+              <li class=""><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class=""><a class="link twitter" href="" aria-label="Twitter"></a></li>
+              <li class=""><a class="link facebook" href="" aria-label="Facebook"></a></li>
+              <li class=""><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+            </ul>
           </li>
         </ul>
       </div>
