--- a/index.html
+++ b/index.html
@@ -118,21 +118,22 @@
             <p class="our-team-section-title">Игорь Демьяненко</p>
             <p class="our-team-item-text">Product Designer</p>
             <ul class="social-list list">
-              <li class=""><a class="link instagram" href="" aria-label="Instagram"></a></li>
-              <li class=""><a class="link twitter" href="" aria-label="Twitter"></a></li>
-              <li class=""><a class="link facebook" href="" aria-label="Facebook"></a></li>
-              <li class=""><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+              <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
+              <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
+              <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
             </ul>
           </li>
           <li class="item">
             <img class="image" src="./images/our-team-olha-repina.jpg" alt="Ольга Репина" width="270" />
             <p class="our-team-section-title">Ольга Репина</p>
             <p class="our-team-item-text">Frontend Developer</p>
+
             <ul class="social-list list">
-              <li class=""><a class="link instagram" href="" aria-label="Instagram"></a></li>
-              <li class=""><a class="link twitter" href="" aria-label="Twitter"></a></li>
-              <li class=""><a class="link facebook" href="" aria-label="Facebook"></a></li>
-              <li class=""><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+              <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
+              <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
+              <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
             </ul>
           </li>
           <li class="item">
@@ -140,10 +141,10 @@
             <p class="our-team-section-title">Николай Тарасов</p>
             <p class="our-team-item-text">Marketing</p>
             <ul class="social-list list">
-              <li class=""><a class="link instagram" href="" aria-label="Instagram"></a></li>
-              <li class=""><a class="link twitter" href="" aria-label="Twitter"></a></li>
-              <li class=""><a class="link facebook" href="" aria-label="Facebook"></a></li>
-              <li class=""><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+              <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
+              <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
+              <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
             </ul>
           </li>
           <li class="item">
@@ -151,10 +152,10 @@
             <p class="our-team-section-title">Михаил Ермаков</p>
             <p class="our-team-item-text">UI Designer</p>
             <ul class="social-list list">
-              <li class=""><a class="link instagram" href="" aria-label="Instagram"></a></li>
-              <li class=""><a class="link twitter" href="" aria-label="Twitter"></a></li>
-              <li class=""><a class="link facebook" href="" aria-label="Facebook"></a></li>
-              <li class=""><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+              <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
+              <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
+              <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
             </ul>
           </li>
         </ul>
@@ -183,15 +184,23 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <!-- Адресс -->
-      <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
-      <address class="address">
-        <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="footer-contacts list">
-          <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <!-- Address -->
+      <div class="address-container">
+        <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+        <address class="address">
+          <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="footer-contacts list">
+            <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+        <div class="social-container">
+          <h3 class="join">присоединяйтесь</h3>
+
+        </div>
+      </div>
+
+
     </div>
   </footer>
 
