--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container">
+    <div class="container address-container">
       <!-- Address -->
-      <div class="address-container">
+      <div class="">
         <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
         <address class="address">
           <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
@@ -194,11 +194,17 @@
             <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
         </address>
-        <div class="social-container">
-          <h3 class="join">присоединяйтесь</h3>
-
-        </div>
       </div>
+      <div class="social-container">
+        <h3 class="title">присоединяйтесь</h3>
+        <ul class="social-list list">
+          <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
+          <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
+          <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
+          <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+        </ul>
+      </div>
+
 
 
     </div>
