--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-
+  <!-- Header -->
   <header class="page-header">
     <div class="container nav-container">
       <nav class="nav">
