--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
 
 <body>
 
+    <!-- Header -->
     <header class="page-header">
         <div class="container nav-container">
             <nav class="nav">
@@ -35,8 +36,8 @@
 
 
             <ul class="header-contacts list">
-                <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="item envelope"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -146,17 +147,32 @@
         </div>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <!-- Адресс -->
-            <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
-            <address class="address">
-                <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="footer-contacts list">
-                    <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <div class="container address-container">
+            <!-- Address -->
+            <div class="">
+                <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+                <address class="address">
+                    <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="footer-contacts list">
+                        <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="social-container">
+                <h3 class="title">присоединяйтесь</h3>
+                <ul class="social-list list">
+                    <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
+                    <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
+                    <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
+                    <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
                 </ul>
-            </address>
+            </div>
+
+
+
         </div>
     </footer>
 
